fix css overflow issue

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -90,12 +90,12 @@ Form Modal Styling
 	justify-content: center;
 	position: fixed;
 	background: linear-gradient(-180deg, #676767 0%, #383838 100%);
-
+	overflow: auto;
 }
 
 .modal-panel {
 	width: 40%;
-	height: 500px;	
+  height: 625px;
 }
 
 .modal-panel > * {
@@ -111,7 +111,7 @@ Form Modal Styling
 }
 
 .modal-close:hover {
-	color: rgb(65, 134, 247);	
+	color: rgb(65, 134, 247);
 }
 /**************************************
 General Form Styling
@@ -144,7 +144,7 @@ form-area {
 }
 
 /*.direction-selection > * {*/
-	
+
 /*}*/
 /**************************************
 Landing Header
@@ -181,7 +181,7 @@ Landing Header
 }
 
 #appear-follow-nav button:active {
-	
+
 }
 
 .book-trip-no-disappear {
@@ -315,7 +315,7 @@ Landing Main
 	color: #505050;
 	line-height: 32px;
 	color: gray;
-	
+
 }
 
 .amenitie i {
@@ -332,7 +332,7 @@ Landing Main
 }
 
 .fhq-answer {
-	font-size: 15px,	
+	font-size: 15px,
 }
 
 
@@ -465,15 +465,15 @@ Forms styling
 }
 
 #roundtrip {
-	
+
 }
 
 .trip-type .selected {
-	background: rgb(65, 134, 247);	
+	background: rgb(65, 134, 247);
 }
 
 .trip-type .non-selected:hover {
-	background: rgba(40, 114, 227, 0.8);		
+	background: rgba(40, 114, 227, 0.8);
 }
 
 
@@ -499,14 +499,14 @@ Forms styling
 }
 
 .div-line {
-	width: 100%; 
-	height: 5px; 
+	width: 100%;
+	height: 5px;
 	/*border-bottom: 3px solid gray; */
 	text-align: center
 }
 
 .div-line-text {
-	font-size: 15px; 
+	font-size: 15px;
 	padding: 0 10px;
 	cursor: default;
 	color: white;
@@ -553,7 +553,7 @@ Checkout confirmation
 }
 
 /*************************************
-Retina Display 
+Retina Display
 *************************************/
 @media only screen and (min--moz-device-pixel-ratio: 2),
 
